--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,9 +12,11 @@
     display: flex;
     align-items: center;
     background-color: #131921;
-    position: sticky;
+    position: fixed;
     top: 0;
+    width: 100vw;
     z-index: 100;
+    
 }
 
 .header__logo {
@@ -66,7 +68,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 10px;
-    margin-right: 10px;  
+    margin-right: 30px;  
     color: white;
     align-items: center;
 }
