--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,9 +1,18 @@
+.title{
+    align-items: center;
+    color: white;
+    align-items: center;
+    
+}
 .home {
     display: flex;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
     max-width: 1500px;
+    margin-top: 100px;
+    
+    
 }
 .home__image {
     width: 100%;
@@ -16,6 +25,11 @@
 .home__row {  
     display: flex; 
     z-index: 1; 
-    margin-left: 5px;  
-    margin-right: 5px;
+    margin-left: 10px;  
+    margin-right: 20px;
+    margin-bottom: 10px;
+}
+.home__product{
+     margin-left: 10px;  
+    margin-right: 20px;
 }
