--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,8 +13,9 @@
     align-items: center;
     background-color: #131921;
     position: fixed;
+    overflow: auto;
     top: 0;
-    width: 100vw;
+    width: 100%;
     z-index: 100;
     
 }
@@ -34,6 +35,7 @@
     text-decoration: none;
     border: 0;
     color: white;
+    margin-bottom: 0;
 }
 
 .header__search {
@@ -42,11 +44,13 @@
     align-items: center;
     border-radius: 24px;
     margin: 0 10px;
+
+  
 }
 
 .header__searchInput {
-    height: 12px;
-    padding: 10px;
+    height: 30px;
+    padding: 5px;
     border: none;
     width: 100%;
     border-radius: 10px 0 0 10px;
@@ -54,7 +58,7 @@
 
 .header__searchImage{
     padding: 5px;
-    height: 22px !important;
+    height: 30px !important;
     background-color:var(--dark-orange);
     border-radius: 0 10px 10px 0;
 }
@@ -94,3 +98,4 @@
     margin-left: 10px;
     margin-right: 10px;
 }
+
