--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -9,6 +9,7 @@
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
     max-width: 1500px;
     margin-top: 100px;
     
@@ -28,8 +29,10 @@
     margin-left: 10px;  
     margin-right: 20px;
     margin-bottom: 10px;
+  
 }
 .home__product{
      margin-left: 10px;  
     margin-right: 20px;
+    margin-bottom: 10px;
 }
