--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,6 +1,6 @@
 .login {
     display: flex;
-     background-color: #191919;
+     background-color: #212121;
      margin-top: 50px;
      height: 100vh;
       width: 100vw;
@@ -13,10 +13,11 @@
   
 }
 .login__page{
-    
+    background-color: #191919;
     align-items: center;
     margin-left: auto;
     margin-right: auto;
+    
 }
 
 .login__logo {
@@ -38,10 +39,13 @@
     height: fit-content;
     display: flex;
     flex-direction: column;
-    border-radius: 5px;
+    border-radius: 20px !important;
     border: 1px solid lightgray;
     padding: 20px;
     align-items: center;
+}
+input{
+  padding: 2px;
 }
 
 .login__container > h1 {
@@ -67,7 +71,7 @@
 
 .login__signInButton {
     background: var(--dark-orange);
-    border-radius: 2px;
+    border-radius: 10px !important;
     width: 100%;
     height: 30px;
     border: 1px solid;
@@ -78,8 +82,11 @@
   }
 
   .login__registerButton {
-    border-radius: 2px;
+    border-radius: 10px !important;
+   
     width: 100%;
+    
+    
     height: 30px;
     border: 1px solid;
     margin-top: 10px;
