--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,6 +1,6 @@
 .register {
     display: flex;
-     background-color: #191919;
+     background-color: #212121;
      margin-top: 50px;
      height: 100vh;
       width: 100vw;
@@ -16,7 +16,7 @@ input{
     border-radius: 10px;
 }
 .login__page{
-    
+    border-radius: 20px;
     align-items: center;
     margin-left: auto;
     margin-right: auto;
@@ -81,12 +81,15 @@ input{
     height: 30px;
     border: 1px solid;
     margin-top: 10px;
+       cursor: pointer;
   }
   .login__signInButton:hover{
     color: white;
   }
 
+
   .login__registerButton {
+    cursor: pointer;
     border-radius: 2px;
     width: 100%;
     height: 30px;
