--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,6 +19,11 @@
     z-index: 100;
     
 }
+.button__search{
+    cursor: pointer;
+    border: none;
+    background: transparent;
+}
 
 .header__logo {
     display: flex;
