--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,13 +4,24 @@
     align-items: center;
     
 }
+ul{
+     display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+}
+/* li{
+     list-style: none;
+  flex: 0 0 33.333333%;
+} */
 .home {
-    display: flex;
+   display: flex;
+
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
-    max-width: 1500px;
+
+    width: 100%s;
+    max-width: 100%;
     margin-top: 100px;
     
     
@@ -24,7 +35,7 @@
 }
 
 .home__row {  
-    display: flex; 
+    display: block; 
     z-index: 1; 
     margin-left: 10px;  
     margin-right: 20px;
